Update InMemoryTaskManager.java