@@ -1,50 +1,35 @@
 package manager;
 
-import model.Epic;
-import model.Status;
-import model.Subtask;
-import model.Task;
-
+import model.*;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class InMemoryTaskManager implements TaskManager {
-    protected int idCounter = 1;
     protected final Map<Integer, Task> tasks = new HashMap<>();
-    protected final Map<Integer, Epic> epics = new HashMap<>();
     protected final Map<Integer, Subtask> subtasks = new HashMap<>();
+    protected final Map<Integer, Epic> epics = new HashMap<>();
     protected final HistoryManager historyManager = Managers.getDefaultHistory();
+    protected int nextId = 1;
     protected final Set<Task> prioritizedTasks = new TreeSet<>(Comparator
             .comparing(Task::getStartTime, Comparator.nullsLast(LocalDateTime::compareTo))
             .thenComparingInt(Task::getId));
 
     protected int generateId() {
-        return idCounter++;
+        return nextId++;
     }
 
-    @Override
-    public void addTask(Task task) {
-        task.setId(generateId());
-        tasks.put(task.getId(), task);
-        prioritizedTasks.add(task);
-    }
-
-    @Override
-    public void addEpic(Epic epic) {
-        epic.setId(generateId());
-        epics.put(epic.getId(), epic);
-    }
-
-    @Override
-    public void addSubtask(Subtask subtask) {
-        subtask.setId(generateId());
-        subtasks.put(subtask.getId(), subtask);
-        Epic epic = epics.get(subtask.getEpicId());
-        epic.addSubtaskId(subtask.getId());
-        updateEpicFields(epic);
-        prioritizedTasks.add(subtask);
+    private boolean checkTimeIntersection(Task task) {
+        if (task.getStartTime() == null || task.getEndTime() == null) {
+            return false;
+        }
+        for (Task t : prioritizedTasks) {
+            if (t.getId() == task.getId() || t.getStartTime() == null || t.getEndTime() == null) continue;
+            if (!(task.getEndTime().isBefore(t.getStartTime()) || task.getStartTime().isAfter(t.getEndTime()))) {
+                return true;
+            }
+        }
+        return false;
     }
 
     @Override
@@ -53,92 +38,13 @@ public class InMemoryTaskManager implements TaskManager {
     }
 
     @Override
-    public List<Epic> getAllEpics() {
-        return new ArrayList<>(epics.values());
-    }
-
-    @Override
     public List<Subtask> getAllSubtasks() {
         return new ArrayList<>(subtasks.values());
     }
 
     @Override
-    public Task getTaskById(int id) {
-        Task task = tasks.get(id);
-        if (task != null) historyManager.add(task);
-        return task;
-    }
-
-    @Override
-    public Epic getEpicById(int id) {
-        Epic epic = epics.get(id);
-        if (epic != null) historyManager.add(epic);
-        return epic;
-    }
-
-    @Override
-    public Subtask getSubtaskById(int id) {
-        Subtask subtask = subtasks.get(id);
-        if (subtask != null) historyManager.add(subtask);
-        return subtask;
-    }
-
-    @Override
-    public void updateTask(Task task) {
-        if (tasks.containsKey(task.getId())) {
-            prioritizedTasks.remove(tasks.get(task.getId()));
-            tasks.put(task.getId(), task);
-            prioritizedTasks.add(task);
-        }
-    }
-
-    @Override
-    public void updateEpic(Epic epic) {
-        if (epics.containsKey(epic.getId())) {
-            epics.put(epic.getId(), epic);
-            updateEpicFields(epic);
-        }
-    }
-
-    @Override
-    public void updateSubtask(Subtask subtask) {
-        if (subtasks.containsKey(subtask.getId())) {
-            prioritizedTasks.remove(subtasks.get(subtask.getId()));
-            subtasks.put(subtask.getId(), subtask);
-            prioritizedTasks.add(subtask);
-            updateEpicFields(epics.get(subtask.getEpicId()));
-        }
-    }
-
-    @Override
-    public void removeTaskById(int id) {
-        prioritizedTasks.remove(tasks.remove(id));
-        historyManager.remove(id);
-    }
-
-    @Override
-    public void removeEpicById(int id) {
-        Epic epic = epics.remove(id);
-        if (epic != null) {
-            for (int subId : epic.getSubtaskIds()) {
-                subtasks.remove(subId);
-                prioritizedTasks.removeIf(t -> t.getId() == subId);
-                historyManager.remove(subId);
-            }
-        }
-        historyManager.remove(id);
-    }
-
-    @Override
-    public void removeSubtaskById(int id) {
-        Subtask subtask = subtasks.remove(id);
-        if (subtask != null) {
-            Epic epic = epics.get(subtask.getEpicId());
-            epic.removeSubtaskId(id);
-            updateEpicFields(epic);
-            prioritizedTasks.remove(subtask);
-            historyManager.remove(id);
-        }
+    public List<Epic> getAllEpics() {
+        return new ArrayList<>(epics.values());
     }
 
     @Override
@@ -151,40 +57,168 @@ public class InMemoryTaskManager implements TaskManager {
     }
 
     @Override
+    public void clearSubtasks() {
+        for (Subtask subtask : subtasks.values()) {
+            prioritizedTasks.remove(subtask);
+            historyManager.remove(subtask.getId());
+        }
+        subtasks.clear();
+        for (Epic epic : epics.values()) {
+            epic.getSubtaskIds().clear();
+            updateEpicFields(epic);
+        }
+    }
+
+    @Override
     public void clearEpics() {
         for (Epic epic : epics.values()) {
-            for (int subId : epic.getSubtaskIds()) {
-                historyManager.remove(subId);
-                prioritizedTasks.removeIf(t -> t.getId() == subId);
-            }
             historyManager.remove(epic.getId());
+        }
+        for (Subtask subtask : subtasks.values()) {
+            prioritizedTasks.remove(subtask);
+            historyManager.remove(subtask.getId());
         }
         epics.clear();
         subtasks.clear();
     }
 
     @Override
-    public void clearSubtasks() {
-        for (Subtask subtask : subtasks.values()) {
-            Epic epic = epics.get(subtask.getEpicId());
-            epic.removeSubtaskId(subtask.getId());
-            updateEpicFields(epic);
-            prioritizedTasks.remove(subtask);
-            historyManager.remove(subtask.getId());
+    public Task getTaskById(int id) {
+        Task task = tasks.get(id);
+        if (task != null) historyManager.add(task);
+        return task;
+    }
+
+    @Override
+    public Subtask getSubtaskById(int id) {
+        Subtask subtask = subtasks.get(id);
+        if (subtask != null) historyManager.add(subtask);
+        return subtask;
+    }
+
+    @Override
+    public Epic getEpicById(int id) {
+        Epic epic = epics.get(id);
+        if (epic != null) historyManager.add(epic);
+        return epic;
+    }
+
+    @Override
+    public void addTask(Task task) {
+        task.setId(generateId());
+        if (checkTimeIntersection(task)) {
+            throw new IllegalArgumentException("Task time overlaps with another task");
         }
-        subtasks.clear();
+        tasks.put(task.getId(), task);
+        prioritizedTasks.add(task);
+    }
+
+    @Override
+    public void addEpic(Epic epic) {
+        epic.setId(generateId());
+        epics.put(epic.getId(), epic);
+    }
+
+    @Override
+    public void addSubtask(Subtask subtask) {
+        if (!epics.containsKey(subtask.getEpicId())) {
+            throw new IllegalArgumentException("Epic not found");
+        }
+        subtask.setId(generateId());
+        if (checkTimeIntersection(subtask)) {
+            throw new IllegalArgumentException("Subtask time overlaps with another task");
+        }
+        subtasks.put(subtask.getId(), subtask);
+        prioritizedTasks.add(subtask);
+        Epic epic = epics.get(subtask.getEpicId());
+        epic.addSubtaskId(subtask.getId());
+        updateEpicFields(epic);
+    }
+
+    @Override
+    public void updateTask(Task task) {
+        if (!tasks.containsKey(task.getId())) return;
+        if (checkTimeIntersection(task)) {
+            throw new IllegalArgumentException("Task time overlaps with another task");
+        }
+        prioritizedTasks.remove(tasks.get(task.getId()));
+        tasks.put(task.getId(), task);
+        prioritizedTasks.add(task);
+    }
+
+    @Override
+    public void updateSubtask(Subtask subtask) {
+        if (!subtasks.containsKey(subtask.getId())) return;
+        if (checkTimeIntersection(subtask)) {
+            throw new IllegalArgumentException("Subtask time overlaps with another task");
+        }
+        prioritizedTasks.remove(subtasks.get(subtask.getId()));
+        subtasks.put(subtask.getId(), subtask);
+        prioritizedTasks.add(subtask);
+        updateEpicFields(epics.get(subtask.getEpicId()));
+    }
+
+    @Override
+    public void updateEpic(Epic epic) {
+        int id = epic.getId();
+        Epic saved = epics.get(id);
+        if (saved == null) return;
+        saved.setTitle(epic.getTitle());
+        saved.setDescription(epic.getDescription());
+    }
+
+    @Override
+    public void removeTaskById(int id) {
+        Task task = tasks.remove(id);
+        if (task != null) {
+            prioritizedTasks.remove(task);
+            historyManager.remove(id);
+        }
+    }
+
+    @Override
+    public void removeSubtaskById(int id) {
+        Subtask subtask = subtasks.remove(id);
+        if (subtask != null) {
+            prioritizedTasks.remove(subtask);
+            Epic epic = epics.get(subtask.getEpicId());
+            if (epic != null) {
+                epic.removeSubtaskId(id);
+                updateEpicFields(epic);
+            }
+            historyManager.remove(id);
+        }
+    }
+
+    @Override
+    public void removeEpicById(int id) {
+        Epic epic = epics.remove(id);
+        if (epic != null) {
+            for (int subtaskId : epic.getSubtaskIds()) {
+                Subtask subtask = subtasks.remove(subtaskId);
+                if (subtask != null) {
+                    prioritizedTasks.remove(subtask);
+                    historyManager.remove(subtaskId);
+                }
+            }
+            historyManager.remove(id);
+        }
     }
 
     @Override
     public List<Subtask> getSubtasksOfEpic(int epicId) {
-        Epic epic = epics.get(epicId);
-        if (epic == null) return List.of();
-        return epic.getSubtaskIds().stream()
-                .map(subtasks::get)
-                .collect(Collectors.toList());
+        if (!epics.containsKey(epicId)) return Collections.emptyList();
+        List<Subtask> result = new ArrayList<>();
+        for (int subtaskId : epics.get(epicId).getSubtaskIds()) {
+            Subtask subtask = subtasks.get(subtaskId);
+            if (subtask != null) {
+                result.add(subtask);
+            }
+        }
+        return result;
     }
 
-    private void updateEpicFields(Epic epic) {
+    protected void updateEpicFields(Epic epic) {
         List<Subtask> subtasksOfEpic = getSubtasksOfEpic(epic.getId());
         if (subtasksOfEpic.isEmpty()) {
             epic.setStatus(Status.NEW);
@@ -196,27 +230,25 @@ public class InMemoryTaskManager implements TaskManager {
 
         boolean allNew = true;
         boolean allDone = true;
+        Duration totalDuration = Duration.ZERO;
         LocalDateTime earliestStart = null;
         LocalDateTime latestEnd = null;
-        Duration totalDuration = Duration.ZERO;
 
-        for (Subtask s : subtasksOfEpic) {
-            if (s.getStatus() != Status.NEW) allNew = false;
-            if (s.getStatus() != Status.DONE) allDone = false;
+        for (Subtask subtask : subtasksOfEpic) {
+            Status status = subtask.getStatus();
+            if (status != Status.NEW) allNew = false;
+            if (status != Status.DONE) allDone = false;
 
-            if (s.getStartTime() != null) {
-                if (earliestStart == null || s.getStartTime().isBefore(earliestStart)) {
-                    earliestStart = s.getStartTime();
+            if (subtask.getStartTime() != null) {
+                if (earliestStart == null || subtask.getStartTime().isBefore(earliestStart)) {
+                    earliestStart = subtask.getStartTime();
                 }
-                LocalDateTime end = s.getEndTime();
-                if (latestEnd == null || (end != null && end.isAfter(latestEnd))) {
-                    latestEnd = end;
+                LocalDateTime subtaskEnd = subtask.getEndTime();
+                if (latestEnd == null || subtaskEnd.isAfter(latestEnd)) {
+                    latestEnd = subtaskEnd;
                 }
             }
-
-            if (s.getDuration() != null) {
-                totalDuration = totalDuration.plus(s.getDuration());
-            }
+            totalDuration = totalDuration.plus(subtask.getDuration());
         }
 
         if (allNew) {
@@ -227,9 +259,9 @@ public class InMemoryTaskManager implements TaskManager {
             epic.setStatus(Status.IN_PROGRESS);
         }
 
+        epic.setDuration(totalDuration);
         epic.setStartTime(earliestStart);
         epic.setEndTime(latestEnd);
-        epic.setDuration(totalDuration);
     }
 
     @Override
